Add endpoint for finding user books with filter (#170)